--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 body{
   background-color: black;
 }
+.html{
+  font-size: 10px;
+}
 /*HEAD PARTIEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE*/
 .rectangel{
   width: 80px;
